--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
@@ -294,7 +294,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
                     style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; ">
                     <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Minimum:
                         {{bmxItem.componentSettings[0].minRule}}</div>
-                    <input type="number" min="0" [max]="rowsCount"
+                    <input type="number" min="0" [max]="bmxItem.componentText.length"
                         [(ngModel)]="bmxItem.componentSettings[0].minRule" style="width:53px; padding: 0px 10px;"
                         [value]="bmxItem.componentSettings[0].minRule">
                 </div>
@@ -305,7 +305,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
                     style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
                     <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Maximum:
                         {{bmxItem.componentSettings[0].maxRule}}</div>
-                    <input type="number" min="0" [max]="rowsCount"
+                    <input type="number" min="0" [max]="bmxItem.componentText.length"
                         [(ngModel)]="bmxItem.componentSettings[0].maxRule" style="width:53px; padding: 0px 10px;"
                         [value]="bmxItem.componentSettings[0].maxRule">
                 </div>
