--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
@@ -288,6 +288,8 @@ style="display: flex;flex-direction: column;gap: 2px;">
         </div>
         <br>
         <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
+        <mat-checkbox [(ngModel)]="alphabeticallyTestNames">Alphabetic order</mat-checkbox>
+
         <div class="sm-row-box-rkScale">
             <div>
                 <div
@@ -337,7 +339,7 @@ align-items: center; ">
 
     <div class="button-Done" style="display: flex; flex-direction: column; align-items: center;">
         <button style="outline: none;color:#76d354;" mat-icon-button
-            (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput, false, true)" [disabled]="false"
+            (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput, dataSource)" [disabled]="false"
             aria-label="ranking">
             <mat-icon>check_circle</mat-icon>
         </button>
@@ -359,17 +361,18 @@ align-items: center; ">
         {{bmxItem.componentSettings[0].categoryDescription}}</div>
 
 </div>
-<div class="scroller-style main-container" [dragula]="(dragRows)?'DRAGGABLE_ROW':''"
-    [(dragulaModel)]="bmxItem.componentText" (dragulaModelChange)="checkDragEvetn($event);">
+<div class="scroller-style main-container" cdkDropList
+[dragula]="(dragRows) ? 'DRAGGABLE_ROW' : ''"
+(cdkDropListDropped)="checkDragEvetn($event)">
 
-    <div *ngFor="let testName of bmxItem.componentText; let y = index">
+    <div *ngFor="let testName of bmxItem.componentText; let y = index" [cdkDragDisabled]="!dragRows" cdkDrag>
 
         <div class="test-name-table">
 
             <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ RANK COLUMN ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
             <div style="min-width: 80px;background-color:white;display: flex;align-items: center;
           justify-content: center;border-left: rgb(231, 230, 230) 1px solid;
-          border-right: rgb(231, 230, 230) 1px solid;border-top: rgb(231, 230, 230) 1px solid;"
+          border-right: rgb(231, 230, 230) 1px solid;border-top: rgb(231, 230, 230) 1px solid;"  [style.background-color]="y == 0 ? 'rgb(217 217 217)' : 'white'"
                 [style.width]="bmxItem.componentSettings[0].selectWidth + 'px'">
                 <div *ngIf="(y !== 0)">
                     <!-- CHECK BOX -->
@@ -388,7 +391,7 @@ align-items: center; ">
             </div>
             <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ END RANK COLUMN ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
 
-            <div *ngFor="let columnName of columnsNames; let e =  index"
+            <div *ngFor="let columnName of columnsNames; let e =  index"  [style.background-color]="y == 0 ? 'rgb(217 217 217)' : 'white'"
                 style="display: flex;align-items: center;justify-content: center;"
                 [ngClass]="(columnName.includes('Comments') == true)?'red':'blue'"
                 [style.padding]="bmxItem.componentSettings[0].rowHeight + 'px'" [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':
@@ -405,13 +408,13 @@ align-items: center; ">
 
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
 
-                    <textarea *ngIf="y == 0 && editSingleTableCells"
+                    <textarea *ngIf="y == 0 && editSingleTableCells"  [style.background-color]="y == 0 ? 'rgb(217 217 217)' : 'white'"
                         [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                         style="text-align: center; font-weight: bold;color: #324395;" class="row-box"
                         [(ngModel)]="testName[columnName]" value="testName[columnName]"></textarea>
 
 
-                    <p style="text-align: center; font-weight: bold;color: #324395;margin: 0 0 0px;"
+                    <p style="text-align: center; font-weight: bold;color: #324395;margin: 0 0 0px;"  [style.background-color]="y == 0 ? 'rgb(217 217 217)' : 'white'"
                         [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                         *ngIf=" !editSingleTableCells">{{testName[columnName]}}
                     </p>
@@ -743,5 +746,5 @@ align-items: center; ">
 <app-table *ngIf="showModalTable" (save)="showModalTable = $event" [displayedColumns]="columnsNames"
 [dataSource]="dataSource" (cancelEvent)="showModalTable = false"></app-table>
 
-<app-names-uploader *ngIf="showFileUploader"  (save)="upLoadNamesAndRationales(testNamesInput, false, false); showFileUploader = false" [displayedColumns]="columnsNames"
+<app-names-uploader *ngIf="showFileUploader"  (save)="upLoadNamesAndRationales(testNamesInput, $event); showFileUploader = false" [componentSetting]="bmxItem.componentSettings" [displayedColumns]="columnsNames"
 [dataSource]="dataSource" [isRanking]="bmxItem.componentType"  (cancelEvent)="cancelEvent($event)"></app-names-uploader>
