--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
@@ -255,8 +255,8 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
             </mat-form-field>
         </div>
         <br>
-
         <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Questions</mat-checkbox>
+        <mat-checkbox [(ngModel)]="alphabeticallyTestNames">Alphabetic order</mat-checkbox>
 
     </div>
     <mat-card-content>
