--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -123,9 +123,9 @@
                 matTooltipPosition="above" mat-icon-button aria-label="ranking">
                 <mat-icon style="font-size: 26px;" class="full-icon">drag_indicator</mat-icon>
             </button>
-            
+
         </div>
-       <!--  <button (click)="showCreationModalVideo=true; editSingleTableCells = false" class="add-column"
+        <!--  <button (click)="showCreationModalVideo=true; editSingleTableCells = false" class="add-column"
             matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">video_library</mat-icon>
         </button>-->
@@ -139,17 +139,17 @@
             <mat-icon style="font-size: 26px;    z-index: 9;" class="full-icon">swap_horizontal_circle</mat-icon>
         </button>
         <button (click)="editSingleTableCells = !editSingleTableCells"
-                [ngClass]="(!editSingleTableCells)?'add-column':'add-column-active'" matTooltip="edit table cells"
-                matTooltipPosition="above" mat-icon-button aria-label="ranking">
-                <mat-icon style="font-size: 26px;" class="full-icon">explicit</mat-icon>
-            </button>
+            [ngClass]="(!editSingleTableCells)?'add-column':'add-column-active'" matTooltip="edit table cells"
+            matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;" class="full-icon">explicit</mat-icon>
+        </button>
         <button (click)="selectedIndex = i; editSingleTableCells = false; verifyCritera()" class="add-column"
             matTooltip="setup settings" matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
 
-        <button (click)="showFileUploader = true" class="add-column" matTooltip="update names" matTooltipPosition="above"
-            *ngIf="i !== selectedIndex" mat-icon-button>
+        <button (click)="showFileUploader = true" class="add-column" matTooltip="update names"
+            matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">text_fields</mat-icon>
         </button>
 
@@ -161,8 +161,7 @@
     z-index: 1;top: -65px;left: 25%;border: #063074 4px solid; overflow: auto; max-height: 36rem;bottom: -2; ">
 
     <div class="example-handle" cdkDragHandle style="display: flex;flex-direction: row;justify-content: center;
-            cursor: move; height: 25px; width: 100%;"><svg width="24px" fill="currentColor"
-            viewBox="0 0 24 24">
+            cursor: move; height: 25px; width: 100%;"><svg width="24px" fill="currentColor" viewBox="0 0 24 24">
             <path
                 d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
             </path>
@@ -279,9 +278,12 @@
             </div>
             <br>
             <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
+            <mat-checkbox [(ngModel)]="alphabeticallyTestNames">Alphabetic order</mat-checkbox>
+
             <div class="sm-row-box-rkScale">
                 <div>
-                    <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; ">
+                    <div
+                        style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; ">
                         <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Minimum:
                             {{bmxItem.componentSettings[0].minRule}}
                         </div>
@@ -292,7 +294,8 @@
                     <div style="font-size: 13px;color: #48535e;">Min number of selections to vote on</div>
                 </div>
                 <div>
-                    <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
+                    <div
+                        style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
                         <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Maximum:
                             {{bmxItem.componentSettings[0].maxRule}}
                         </div>
@@ -321,7 +324,7 @@
         </div>
         <div class="button-Done" style="display: flex; flex-direction: column; align-items: center;">
             <button style="outline: none;color:#76d354;   font-size: 21px;" mat-icon-button
-                (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput, false,true)" [disabled]="false"
+                (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput, dataSource,true)" [disabled]="false"
                 aria-label="ranking">
                 <mat-icon>check_circle</mat-icon>
             </button>
@@ -341,12 +344,15 @@
         <div style="font-size: 18px;color: #ee7f25;padding-bottom: 20px;">
             {{bmxItem.componentSettings[0].categoryDescription}}</div>
     </div>
-    <div class="scroller-style main-container" [dragula]="(dragRows)?'DRAGGABLE_ROW':''"
-        [(dragulaModel)]="bmxItem.componentText" (dragulaModelChange)="checkDragEvetn($event);">
-        <div *ngFor="let testName of bmxItem.componentText; let y = index">
+    <div class="scroller-style main-container" cdkDropList
+    [dragula]="(dragRows) ? 'DRAGGABLE_ROW' : ''"
+    (cdkDropListDropped)="checkDragEvetn($event)">
+    <div *ngFor="let testName of bmxItem.componentText; let y = index" [cdkDragDisabled]="!dragRows" cdkDrag>
+    
             <!-- <div *ngIf="(y !== 0)" style="color: white;font-size: xx-small;">.</div> -->
-            <div class="test-name-table">
-                <div *ngFor="let columnName of columnsNames; let e =  index"
+            <div class="test-name-table" >
+                
+                <div *ngFor="let columnName of columnsNames; let e =  index"  [style.background-color]="y == 0 ? 'rgb(217 217 217)' : 'white'"
                     style="display: flex;align-items: center;justify-content: center; flex-direction: column;"
                     [ngClass]="(columnName.includes('Comments') == true)?'red':'blue'"
                     [style.padding]="bmxItem.componentSettings[0].rowHeight + 'px'" [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':
@@ -354,18 +360,19 @@
                     (columnName == 'nameCandidates')?bmxItem.componentSettings[0].nameCandidatesWidth + 'px':
                     (columnName.includes('Comments'))?bmxItem.componentSettings[0].commentsWidth + 'px':
                     (columnName.includes('RadioColumn'))?bmxItem.componentSettings[0].radioColumnsWidth + 'px' :
-                    bmxItem.componentSettings[0].columnWidth + 'px'">
+                    bmxItem.componentSettings[0].columnWidth + 'px'" >
+                    
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
-                    <div *ngIf="(y == 0)" class="header-title " (mouseenter)="selectedColumn = e">
+                    <div *ngIf="(y == 0)" class="header-title " (mouseenter)="selectedColumn = e" [style.background-color]="y == 0 ? 'rgb(217 217 217)' : 'transparent'">
                         <div style="display: flex;flex-direction: column;justify-content: center;align-items: center;">
                             <div>
                                 <textarea *ngIf="editSingleTableCells"
                                     [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                                     style="text-align: center; font-weight: bold;color: #324395;" class="row-box"
-                                    [(ngModel)]="testName[columnName]" value="testName[columnName]"></textarea>
+                                    [(ngModel)]="testName[columnName]" value="testName[columnName]" [style.background-color]="y == 0 ? 'rgb(217 217 217)' : 'transparent'"></textarea>
                                 <p style="text-align: center; font-weight: bold;color: #324395;margin: 0 0 0px;padding:5px 1px"
-                                    [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
-                                    *ngIf=" !editSingleTableCells">{{testName[columnName]}}
+                                    [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"[style.background-color]="y == 0 ? 'rgb(217 217 217)' : 'transparent'"
+                                    *ngIf=" !editSingleTableCells">{{testName[columnName]}} 
                                 </p>
                             </div>
                             <div *ngIf="selectedColumn === e && bmxClientPageOverview && !editSingleTableCells" style="display: flex;flex-direction: row;justify-content: space-around;
@@ -418,15 +425,16 @@
                             </div>
                             <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
                             <div style="display: flex;">
-                                <button (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
+                                <button
+                                    (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
                                     *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25; color: white;
                                             min-width: 20px;
                                             line-height: 19px;
                                             padding: 1px 0px;
                                             margin: -12px 6px;
                                             position: absolute;
-                                            animation: rubberBand 700ms ease-in  forwards;height: 25px;"mat-button>
-                                        {{bmxItem.componentText[y]['RATE']}}
+                                            animation: rubberBand 700ms ease-in  forwards;height: 25px;" mat-button>
+                                    {{bmxItem.componentText[y]['RATE']}}
                                 </button>
                             </div>
                             <div style="display: flex;gap: 60px;flex-direction: column;">
@@ -756,5 +764,7 @@
 <app-table *ngIf="showModalTable" (save)="showModalTable = $event" [displayedColumns]="columnsNames"
     [dataSource]="dataSource" (cancelEvent)="showModalTable = false"></app-table>
 
-<app-names-uploader *ngIf="showFileUploader"  (save)="upLoadNamesAndRationales(testNamesInput, false); showFileUploader = false" [displayedColumns]="columnsNames"
-[dataSource]="dataSource" [isRanking]="bmxItem.componentType" (cancelEvent)="cancelEvent($event)"></app-names-uploader>
+<app-names-uploader *ngIf="showFileUploader"
+    (save)="upLoadNamesAndRationales(testNamesInput, $event ); showFileUploader = false"
+    [displayedColumns]="columnsNames" [dataSource]="dataSource" [isRanking]="bmxItem.componentType"
+    (cancelEvent)="cancelEvent($event)"></app-names-uploader>
