--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.scss
@@ -148,21 +148,35 @@
     display: none;
   }
   .test-name-table {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 2px solid rgb(235, 235, 235);
-    border-radius: 5px;
-    width: 100vw;
-    overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      border: 2px solid rgb(235, 235, 235);
+      border-radius: 5px;
+      width: 100vw;
+      overflow: hidden;
   }
-
+.selected{
+  
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 31.2px;
+}
+.noSelected{
+  
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 161px;
+}
   .mobile {
     padding-bottom: 30px;
   }
 
   .selectedCard {
-    display: none;
+    position: relative;
+    bottom: 62px;
   }
   .noSelectedCard {
     right: 7px;
