--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -818,8 +818,10 @@
                             style="width: 300px;" [src]="testName[columnName]"
                             *ngIf=" bmxItem.componentSettings[1].isImageType && (y !== 0) && (columnName == 'name' || columnName == 'nameCandidates')">
                         <!-- TEXT_AREA COMMENTS-->
-                        <div style="display: flex;
-                    justify-content: center;">
+                        <div style="    display: flex;
+                        justify-content: center;
+                        flex-direction: column;
+                        align-items: center;">
                             <textarea *ngIf="y !== 0  && columnName.includes('Comments') == true && selectedCard == y"
                                 [style.width]="'95%'" [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                                 cdkTextareaAutosize [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight" style="text-align: center;height: 64px;width: 358px;font-size: 16px;border: 1px solid grey;
@@ -836,7 +838,7 @@
                         [style.font-size]=" (columnName.includes('name') == true)?'27px':'20px'"
                         [style.color]="(columnName.includes('name') == true)?'#324395':'#bababa'"
                         style="text-align: center;padding: 10px 4px;">{{(testName[columnName])}}</p> -->
-                        <div style="display: flex;align-items: center;justify-content: space-evenly;">
+                        <div style="display: flex;align-items: center;justify-content: space-evenly; width: 300px;">
                             <mat-icon
                                 style="cursor: pointer;position: absolute;left: 60px;color: #324395;margin-top: -10px;"
                                 (click)="playTestNameSound(testName[columnName])" *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('nameCandidates') == true) &&
@@ -849,7 +851,7 @@
                               columnName.includes('ratio') != true"
                                 [style.font-size]=" (columnName.includes('name') == true)?'27px':'20px'"
                                 [style.color]="(columnName.includes('name') == true)?'#324395':'#bababa'"
-                                style="text-align: center;padding: 10px 4px;">{{(testName[columnName])}}</p>
+                                style="text-align: center;padding: 10px 4px; width: 300px;">{{(testName[columnName])}}</p>
                         </div>
 
 
@@ -866,7 +868,7 @@
                     <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 END TABLE CELLS 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
                 </div>
                 <mat-form-field *ngIf="this.bmxItem.componentSettings[0].rankType == 'dropDown' && selectedCard == y"
-                    appearance="outline" style="width: 130px;padding-top: 13px;height: 80px;">
+                    appearance="outline" style="padding-top: 13px;height: 80px;">
                     <mat-label>Rank 1 to {{rankingScaleValue}}</mat-label>
                     <mat-select matNativeControl [(ngModel)]="bmxItem.componentText[y].RATE"
                         (selectionChange)="setRating(bmxItem.componentText[y].RATE,y)">
@@ -920,8 +922,11 @@
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 END HEADER TEXT AREA  🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
 
                     <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 TABLE CELLS  🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
-                    <div
-                        [style.width]=" columnName == 'nameCandidates'?bmxItem.componentSettings[0].nameCandidatesWidth-20 + 'px':''">
+                    <div style="    display: flex;
+                    justify-content: center;
+                    flex-direction: column;
+                    align-items: center;"
+                        [style.width]=" columnName == 'nameCandidates'?bmxItem.componentSettings[0].nameCandidatesWidth  + 20 + 'px':''">
 
                         <!-- IF ELSE TEMPLATE INPUTS  -->
                         <div style="background-color: lightgray;">
@@ -939,8 +944,10 @@
                             style="width: 300px;" [src]="testName[columnName]"
                             *ngIf=" bmxItem.componentSettings[1].isImageType && (y !== 0) && (columnName == 'name' || columnName == 'nameCandidates')">
                         <!-- TEXT_AREA COMMENTS-->
-                        <div style="display: flex;
-                justify-content: center;">
+                        <div style="    display: flex;
+                        justify-content: center;
+                        flex-direction: column;
+                        align-items: center;">
                             <textarea *ngIf="y !== 0  && columnName.includes('Comments') == true && selectedCard == y"
                                 [style.width]="'95%'" [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                                 cdkTextareaAutosize [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight" style="text-align: center;height: 64px;width: 358px;font-size: 16px;border: 1px solid grey;
@@ -957,7 +964,7 @@
                     [style.font-size]=" (columnName.includes('name') == true)?'27px':'20px'"
                     [style.color]="(columnName.includes('name') == true)?'#324395':'#bababa'"
                     style="text-align: center;padding: 10px 4px;">{{(testName[columnName])}}</p> -->
-                        <div style="display: flex;align-items: center;justify-content: space-evenly;">
+                        <div style="display: flex;align-items: center;justify-content: center; width: 300px;">
                             <mat-icon
                                 style="cursor: pointer;position: absolute;left: 60px;color: #324395;margin-top: -10px;"
                                 (click)="playTestNameSound(testName[columnName])" *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('nameCandidates') == true) &&
@@ -987,7 +994,7 @@
                     <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 END TABLE CELLS 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
                 </div>
                 <mat-form-field *ngIf="this.bmxItem.componentSettings[0].rankType == 'dropDown' && selectedCard == y"
-                    appearance="outline" style="width: 130px;padding-top: 13px;height: 80px;">
+                    appearance="outline" style="padding-top: 13px;height: 80px;">
                     <mat-label>Rank 1 to {{rankingScaleValue}}</mat-label>
                     <mat-select matNativeControl [(ngModel)]="bmxItem.componentText[y].RATE"
                         (selectionChange)="setRating(bmxItem.componentText[y].RATE,y)">
@@ -995,7 +1002,7 @@
                             {{star.icon}}</mat-option>
                     </mat-select>
                 </mat-form-field>
-            </div>p
+            </div>
 
         </div>
 
