--- a/src/app/bmx/components/project-list/project-list.component.scss
+++ b/src/app/bmx/components/project-list/project-list.component.scss
@@ -15,6 +15,9 @@
   td {
     text-align: start;
   }
+  thead{
+    display: contents !important;
+  }
 }
 @media screen and (max-width: 1510px) {
   .table {
