--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -495,7 +495,7 @@
 
                         <!-- TEXT_AREA COLUMN COMMENTS-->
                         <textarea *ngIf="y !== 0  && columnName.includes('Comments') == true "
-                            [style.width]="(bmxItem.componentSettings[0].commentsWidth - 20) +'px'"
+                            [style.width]="(bmxItem.componentSettings[0].commentsWidth - 20) +'px'" 
                             [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" cdkTextareaAutosize
                             [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
                             style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid #dddddd;"
@@ -560,7 +560,7 @@
                 <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ RANK RENDERER ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
                 <div [style.background-color]="y == 0 ? 'rgb(217 217 217)' : 'white'" [ngClass]="(this.bmxItem.componentSettings[0].rankType == 'dragAndDrop')?'rank-column':
                         (this.bmxItem.componentSettings[0].rankType == 'dropDown')?'rank-column1':'rank-column1'"
-                    [style.width]="bmxItem.componentSettings[0].rateWidth + 'px'"
+                    [style.width]="bmxItem.componentSettings[0].rateWidth + 'px'" style="display: flex; justify-content: center;"
                     *ngIf="this.bmxItem.componentSettings[0].rankType != 'dinamycRadio'">
                     <div *ngIf="(y !== 0)">
                         <!--☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️ DROP DOWN ☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️-->
@@ -799,13 +799,13 @@
 
                     <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 TABLE CELLS  🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
 
-                    <div
+                    <div style="display: flex; justify-content: center;"
                         [style.width]=" columnName == 'nameCandidates'?bmxItem.componentSettings[0].nameCandidatesWidth-20 + 'px':''">
 
                         <!-- IF ELSE TEMPLATE INPUTS  -->
                         <div style="background-color: lightgray;">
                             <div *ngIf="selectedCard == y" style="position: absolute;margin-top: 5px;"
-                                [style.left.px]="(e * 40)">
+                                [style.left.px]="(e * 80)">
                                 <span *ngIf="y !== 0  &&  columnName.includes('RadioColumn') == true"
                                     style="padding-right: 8px;">{{e - 1}}</span>
                                 <input type="radio" *ngIf="y !== 0  &&  columnName.includes('RadioColumn') == true"
@@ -917,10 +917,8 @@
                 </div>
                 <!-- <button *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop'" mat-button
         style="background-color:#ee7f25 ;color: white;">{{y}}</button> -->
-
-                <div *ngFor="let columnName of columnsNames; let e =  index">
+                <div *ngFor="let columnName of columnsNames; let e =  index" style="display: flex; justify-content: center;">
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 END HEADER TEXT AREA  🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
-
                     <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 TABLE CELLS  🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
                     <div style="    display: flex;
                     justify-content: center;
@@ -931,7 +929,7 @@
                         <!-- IF ELSE TEMPLATE INPUTS  -->
                         <div style="background-color: lightgray;">
                             <div *ngIf="selectedCard == y" style="position: absolute;margin-top: 5px;"
-                                [style.left.px]="(e * 40)">
+                                [style.left.px]="(e * 72)">
                                 <span *ngIf="y !== 0  &&  columnName.includes('RadioColumn') == true"
                                     style="padding-right: 8px;">{{e - 1}}</span>
                                 <input type="radio" *ngIf="y !== 0  &&  columnName.includes('RadioColumn') == true"
