--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -546,6 +546,6 @@
 <div *ngIf="showHotKeys" class="dialog-overlay">
   <div class="hotkeys-close" (click)="showHotKeys = false">x</div>
   <div class="dialog-content">
-    <img src="assets/img/hotkeys.png" alt="">
+    <img src="assets/img/hotkeys8.png" alt="">
   </div>
 </div>
